--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "globals": "^15.14.0",
+        "i18next": "^25.4.0",
+        "i18next-browser-languagedetector": "^8.2.0",
         "laravel-vite-plugin": "^1.0",
         "lodash": "^4.17.21",
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.2",
+        "react-i18next": "^15.7.1",
         "react-use": "^17.4.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
