--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-hot-toast": "^2.5.2",
         "react-i18next": "^15.7.1",
         "react-use": "^17.4.0",
+        "recharts": "^3.1.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
